﻿1.1.1
=====

New Features:

  * None.

Bugfixes:

  * None.

Translation Updates:

  * None.


1.1.0
=====

New Features:

  * Support blocking specific users and IP addresses from editing and uploading
    via the new Special:Block, Special:Unblock and Special:BlockList pages.
  * Add optional reCAPTCHA (http://www.google.com/recaptcha) support for
    combatting spam on the Special:Account and Special:Edit pages using CAPTCHA
    challenge-response.
  * Add a honeypot input, similar to Mediawiki, to help deter spambots.
  * Add support for the Mediawiki <gallery> tag for generating image galleries.
  * Add a "Filter search results by namespace" option to the Special:Search
    page.
  * Improve search performance, exclude redirects from search indexing, and
    weight topic names more heavily than topic content to improve accuracy.
    Existing JAMWiki installs should rebuild their search index using the
    tools on the Special:Maintenance page.
  * Update the editing toolbar with new look & feel and new functions.
  * Add a "View Source" tab to allow users who do not have permission to edit
    a topic to view its wiki markup.
  * Add the ability for sysadmins to permanently delete topic versions from the
    Special:Manage page.  Requested by Tan-Vinh Nguyen.
  * Allow viewing of deleted topic versions from the Special:Manage page.
  * Display HTML links of the form "[http://example.com]" using numbered links
    instead of the URL, which matches Mediawiki behavior.  The legacy behavior
    can be restored from the "Parser" tab of the Special:Admin page.
  * Automatically display virtual wiki links in the left nav for the
    Special:RecentChanges page.  This feature may be disabled from admin pages.
  * Support the #language parser function. Usage:
    "{{#language: code | optional return code}}".
  * Add support for the universal edit button plugin.  See 
    http://universaleditbutton.org for further details.