@@ -7,7 +7,10 @@ New Features:
 
 Bugfixes:
 
-  * None.
+  * Spring security 3.0 change how logout redirection is handled.  Update
+    JAMWiki to redirect logout properly.  Note that this change modifies
+    the applicationContext-security.xml file.  Reported by Leonardo Silva Kury
+    Aragão Mendes.
 
 Translation Updates:
 
